# tangent.org

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure  configure.ac
conf.d/: 0.conf  include.mk  tangent.conf.in
docs/: conf.py.in  include.mk  index.rst
httpd/: include.am
httpd/conf.d/: 0.conf  tangent.conf
m4/: ax_htmldir.m4
openid/: include.mk
www/: about.rst  conf.py.in  dist.am  include.am
www/_static/: default.css
